fixed element overflow

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 }
 .cards .c img {
   position: relative;
-  left: -1.7px;
+  left: -0.08rem;
   top: 0.1px;
   padding: 0px;
   margin: 0px;
