--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -13,7 +13,7 @@
 
     img{
         position: relative;
-        left:-1.7px ;
+        left:-0.08rem;
         top:0.1px;
         padding: 0px; 
         margin: 0px;
